--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,17 +16,38 @@
             ul{
                 list-style-type: none;
             }
+            table, 
+            td,
+            th {
+                border: 1px solid grey;
+                border-collapse: collapse;
+                padding: 5px;
+            }
         </style>
     </head>
     <body>
         <!-- <img src="./images/coffee.jpg" alt="A cup of coffee"> -->
         <!-- <video autoplay loop src="videos/ocean.mp4"></video>
         <audio src=""></audio> -->
-        <ul>
-            <li>About Me</li>
-            <li>Courses</li>
-            <li>Subscribe</li>
-            <li>Contact Me</li>
-        </ul>
+        <!-- ul> li * 3 -->
+        <!-- ol> li * 3 -->
+        <!-- !Glossary Type Description List -->
+        <!-- dl description list -->
+            <!-- dt description term -->
+            <!-- dd description details -->
+        <table>
+            <tr>
+                <th>Category</th>
+                <th>Amount</th>
+            </tr>
+            <tr>
+                <td>Marketing</td>
+                <td>$100</td>
+            </tr>
+            <tr>
+                <td>Accounting</td>
+                <td>$200</td>
+            </tr>
+        </table>
     </body>
 </html>
