--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,6 +23,9 @@
                 border-collapse: collapse;
                 padding: 5px;
             }
+            tfoot {
+                text-align:left;
+            }
         </style>
     </head>
     <body>
@@ -36,18 +39,33 @@
             <!-- dt description term -->
             <!-- dd description details -->
         <table>
-            <tr>
-                <th>Category</th>
-                <th>Amount</th>
-            </tr>
-            <tr>
-                <td>Marketing</td>
-                <td>$100</td>
-            </tr>
-            <tr>
-                <td>Accounting</td>
-                <td>$200</td>
-            </tr>
+            <!-- ! Semantic HTML -->
+            <thead>
+                <tr>
+                    <th colspan = "2">Expenses</th>
+                </tr>
+                <tr>
+                    <th>Category</th>
+                    <th>Amount</th>
+                </tr>
+            </thead
+            <!-- ! Semantic HTML -->>
+            <tbody>
+                <tr>
+                    <td>Marketing</td>
+                    <td>$100</td>
+                </tr>
+                <tr>
+                    <td>Accounting</td>
+                    <td>$200</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>Total</th>
+                    <th>$300</th>
+                </tr>
+            </tfoot>
         </table>
     </body>
 </html>
