--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Document</title>
-        <style>
+        <!-- <style>
             img {
                 width: 200px;
                 height: 200px;
@@ -33,7 +33,9 @@
             .highlight {
                 background-color: yellow;
             }
-        </style>
+        </style> -->
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/normalize.css">
     </head>
     <body>
         <!-- <img src="./images/coffee.jpg" alt="A cup of coffee"> -->
