--- a/HTML/index.html
+++ b/HTML/index.html
@@ -106,6 +106,7 @@
                 <p>Lorem ipsum dolor sit amet.</p>
             </article>
         </section>
+        <!-- ** Pseudo Element Selectors  */ -->
         <p>Lorem ipsum dolor sit amet.</p>
     </body>
 </html>
