--- a/HTML/part2.html
+++ b/HTML/part2.html
@@ -4,16 +4,45 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/styles2.css">
-        <link rel="stylesheet" href="./css/normalize.css">
-    </head>
-    <body>
-       <p>Lorem ipsum dolor sit amet.</p>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/styles2.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+  </head>
+  <body>
+    <!-- ! Box Model-->
+    <!-- <p>Lorem ipsum dolor sit amet.</p>
+       <p>Lorem ipsum dolor sit amet.</p> -->
+    <!-- ! Sizing Elements -->
+    <!-- <span class="box"></span>
+       <span class="box"></span> -->
+    <!-- ! Overflowing -->
+    <!-- <div class="square">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam similique
+        quos accusantium, odio veritatis earum rem voluptates vero perferendis
+        consequatur numquam sapiente praesentium, sunt id mollitia, distinctio
+        explicabo dicta corporis itaque fugit quod. Error iure voluptates
+        obcaecati voluptatum illo ea cumque et fugit, a harum perferendis
+        repellendus delectus voluptatibus molestias!
+      </p>
+    </div> -->
+    <!-- ! Measurement Units Absolute (px pt in cm mm) and Relative is Responsive ([content] % [view port] vw vh [Font size] em rem = 10 x font size of root element) -->
+    <!-- <div class="boks"></div> -->
+    <!-- ! Positioning Elements -->
+        <!-- ? Relative - relative to the element's normal position -->
+        <!-- ? Absolute - relative to the parent -->
+        <!-- ? Fixed - relative to the viewport -->
+    <!-- <div class="boxes">
+        <div class="bux bux-one"></div>
+        <div class="bux bux-two"></div>
+        <div class="bux bux-three"></div>
+    </div> -->
+    <!-- ! Floating Elements -->
+    <article></article>
+  </body>
 </html>
