--- a/HTML/part2.html
+++ b/HTML/part2.html
@@ -34,15 +34,36 @@
     <!-- ! Measurement Units Absolute (px pt in cm mm) and Relative is Responsive ([content] % [view port] vw vh [Font size] em rem = 10 x font size of root element) -->
     <!-- <div class="boks"></div> -->
     <!-- ! Positioning Elements -->
-        <!-- ? Relative - relative to the element's normal position -->
-        <!-- ? Absolute - relative to the parent -->
-        <!-- ? Fixed - relative to the viewport -->
+    <!-- ? Relative - relative to the element's normal position -->
+    <!-- ? Absolute - relative to the parent -->
+    <!-- ? Fixed - relative to the viewport -->
     <!-- <div class="boxes">
         <div class="bux bux-one"></div>
         <div class="bux bux-two"></div>
         <div class="bux bux-three"></div>
     </div> -->
     <!-- ! Floating Elements -->
-    <article></article>
+    <!-- <article class="tweet">
+      <div class="avatar"></div>
+      <p>Lorem ipsum dolor sit amet.</p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+        delectus dolor temporibus? Corporis, in accusamus possimus molestias
+        porro, aliquid quam eius temporibus dicta nostrum officiis blanditiis
+        quos ea quod sint quia amet repudiandae omnis, error doloremque
+        reiciendis eaque illum esse. Eos, delectus deserunt! Consequatur
+        quisquam, odio delectus nulla porro facere.
+      </p>
+    </article> -->
+    <!-- ! FlexBox - laying out elements in one direction -->
+    <!--? flex-basis - the initial size of a flex item  -->
+    <!--? flex-grow - the growth factor  -->
+    <!--? flex-shrink - the shrink factor  -->
+    <!--? flex -->
+    <div class="container">
+        <div class="bachs bachs-one">A</div>
+        <div class="bachs bachs-two">B</div>
+        <div class="bachs bachs-three">C</div>
+    </div>
   </body>
 </html>
