--- a/HTML/part2.html
+++ b/HTML/part2.html
@@ -60,10 +60,12 @@
     <!--? flex-grow - the growth factor  -->
     <!--? flex-shrink - the shrink factor  -->
     <!--? flex -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="bachs bachs-one">A</div>
         <div class="bachs bachs-two">B</div>
         <div class="bachs bachs-three">C</div>
-    </div>
+    </div> -->
+    <!-- ! GRID -->
+    <div class="contayner"></div>
   </body>
 </html>
