--- a/HTML/Layout.html
+++ b/HTML/Layout.html
@@ -66,6 +66,30 @@
         <div class="bachs bachs-three">C</div>
     </div> -->
     <!-- ! GRID -->
-    <div class="contayner"></div>
+    <!-- <div class="contayner">
+    <div class="bocks bocks1">A</div>
+    <div class="bocks">B</div>
+    <div class="bocks">C</div>
+    <div class="bocks bocks4">D</div>
+    </div> -->
+    <!-- ! Hiding Elements -->
+    <!-- <p class="first">First</p>
+    <p>Second</p> -->
+    <!-- ! Media Queries -->
+    <!-- <div class="containor">
+      <div class="box">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+          provident mollitia pariatur, molestias delectus nemo?
+        </p>
+      </div>
+      <div class="box">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit
+          provident mollitia pariatur, molestias delectus nemo?
+        </p>
+      </div>
+    </div> -->
+    
   </body>
 </html>
