--- a/HTML/typography.html
+++ b/HTML/typography.html
@@ -14,12 +14,27 @@
   </head>
   <body>
     <!-- ! Styling Fonts -->
-    <h1>Heading</h1>
+    <!-- <h1>Heading</h1>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat adipisci
       aspernatur vitae deserunt minima repellendus earum quo ipsa. Ad eligendi
       natus qui, vero assumenda ut?
+    </p> -->
+    <!-- !Flash of Unstyled Text -->
+    <!-- ! Formatting Text -->
+    <h1>Heading 1</h1>
+    <p class="formatting">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum quasi
+      vel numquam doloremque nisi laudantium commodi vitae consequatur ullam
+      quas, architecto laboriosam quod maiores magni ad officia consectetur qui
+      reprehenderit, nostrum maxime asperiores. Sequi praesentium veniam
+      architecto nobis debitis tempore quaerat repellendus. Facere eligendi
+      ullam rerum quidem! Quam, itaque in.
     </p>
-   
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolorum
+      eaque sequi voluptatibus delectus neque non, amet vero voluptas ipsum
+      incidunt unde ea, animi itaque. Nemo inventore dolorem nulla eveniet!
+    </p>
   </body>
 </html>
