--- a/HTML/Forms.html
+++ b/HTML/Forms.html
@@ -14,10 +14,14 @@
     </head>
     <body>
         <form>
-            <label for="name">Name</label>
-            <input id="name" type="text">
-            <label for="email">Email</label>
-            <input id="email" type="email">
+            <div>
+                <label for="name">Name</label>
+                <input id="name" type="text">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input id="email" type="email">
+            </div>
         </form>
     </body>
 </html>
