--- a/HTML/Forms.html
+++ b/HTML/Forms.html
@@ -22,6 +22,8 @@
                 <label for="email">Email</label>
                 <input id="email" type="email">
             </div>
+            <button type="submit">Register</button>
+            <button type="reset">Clear</button>
         </form>
     </body>
 </html>
