--- a/HTML/Forms.html
+++ b/HTML/Forms.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <form>
-            <div>
+            <div class="form-group">
                 <label for="name">Name</label>
                 <input id="name" type="text">
             </div>
